Thu Aug 19 11:11:24 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* enum.c (enum_inject): fix typo of rdoc.
	  patched by Andrei Kulakov [ruby-core:31768]

Thu Aug 19 06:03:27 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (vm_push_frame): initialize block_iseq.  a patch
	  from Peter Weldon at [ruby-core:31757].

Wed Sep 15 02:13:44 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/fiddle/closure.c : Don't use FFI closure alloc on OpenBSD.
	  Thanks Jeremy Evans! [ruby-core:32384]

Wed Aug 18 01:37:49 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* regcomp.c: revert r26701; it introduces Bug #3681.
	  [ruby-core:31677]

Mon Aug 16 23:16:21 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* NEWS: updated.  a patch from Kazuhiro NISHIYAMA in [ruby-dev:42001].

Sun Aug 15 19:59:58 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* lib/webrick/httpresponse.rb (WEBrick::HTTPResponse#set_error):
	  Fix for possible cross-site scripting (CVE-2010-0541). 
	  Found by Apple, reported by Hideki Yamane.
	  Patch by Hirokazu Nishio <nishio.hirokazu AT gmail.com>.

Fri Jul 30 08:51:51 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (file_expand_path): home directory must be absolute.
	  [ruby-core:31537]

Fri Jul 30 08:33:20 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (file_expand_path): should check if could find user.
	  [ruby-core:31538]

Sat Aug  7 13:33:25 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (vm_call0): fix for VM_METHOD_TYPE_NOTIMPLEMENTED.
	  [ruby-dev:41953]

Fri Aug  6 18:59:23 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (realpath_rec): rb_str_modify depends on the length, so
	  resize instead.

Thu Aug  5 21:20:31 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* compile.c (NODE_ARGSCAT, NODE_ARGSPUSH): drop unused ARGSCAT
	  results when poped is true.  [ruby-dev:41933], [Bug #3658]
	  This is retry of r28870 and r28873 which were reverted.

Thu Aug  5 16:57:20 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
